<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="txt_failedto_add_boardingpasses">Please scan valid boarding passes</string>
    <string name="version">Version</string>
    <string name="send_feedback">Send feedback</string>
    <string name="tell_us">Tell us what you think</string>
    <string name="report_problem">Report a problem</string>
    <string name="let_know_bug">Let us know about bug or problem</string>
    <string name="st_ubnity_bring">SeatUnity bring you closer to those who flight with you.</string>
    <string name="rate_app">Rate application</string>
    <string name="txt_exit_message">Do you want to exit?</string>
    <string name="trms_of_servces">Terms of service</string>
    <string name="privcy_plcy">Privacy Policy</string>
    <string name="app_not_found">Unable to find market app</string>
    <string name="share_via">Share Via</string>
    <string name="share">Share App</string>
    <string name="refresh">Refresh</string>
    <string name="about">About</string>
    <string name="all_seatmate">ALL SEATMATES</string>
    <string name="txt_noseatmate_isfound">No seatmate of </string>
    <string name="txt_is_found">is found.</string>
    <string name="txt_no_shared_flight">There is no shared flight.</string>
    <string name="txt_failed_to_get_seatmet">Failed to get seatmates list. Please try again.</string>
    <string name="txt_live_in">Live in</string>
    <string name="txt_prefer_to">Prefer to</string>
    <string name="txt_message">Message.</string>
    <string name="txt_send_email">Please type message to send email</string>
    <string name="txt_seatmet_message_only_online">The seatmates list is only available in the online mode</string>
    <string name="txt_getseatmate_failure">Failed to get seatmates. Please try again.</string>
    <string name="txt_emailsen_failure">No account accociated with this email. Please try again.</string>
    <string name="txt_emailsent_success">Email is sent successfully.</string>
    <string name="txt_emailsen_success">Password is sent to your email. Please check your email</string>
    <string name="txt_delete_boarding_pass">Delete Boarding Pass</string>
    <string name="txt_send">Send Message</string>
    <string name="txt_delete_boarding_pass_text">Are you sure you want to delete boarding pass?</string>
    <string name="txt_enter_email_address">Enter the email address you used to register with SeatUnity</string>
    <string name="txt_failed_to_get_list">Failed to bring. Please check your internet connection.</string>
    <string name="txt_please_check_internet">Please check your internet connection.</string>
    <string name="txt_newand_old_pass_missmatchced">New password and old password mis-matched</string>
    <string name="txt_please_enter_correct_password">Please enter correct password</string>
    <string name="txt_please_enter">Please enter </string>
    <string name="txt_please_enter_username">Please enter your name</string>
    <string name="txt_boarding_pass_added_successfully">Boarding pass added successfully</string>
    <string name="txt_psnger">Passanger</string>
    <string name="txt_invalid_borading_pass">Invalid boarding pass. Please enter valid boarding pass</string>
    <string name="txt_failed_to_scan">Failed to scan barcode</string>
    <string name="msg_error">Error</string>
    <string name="msg_invalid_value">Invalid value</string>
    <string name="txt_reminder_msz">Login or register for free to use your social features and to connect with your seatmates</string>
    <string name="txt_enter_old_pass">Please enter your old password</string>
    <string name="txt_enter_new_pass">Enter your new password</string>
    <string name="txt_enter_status">Please enter status</string>
    <string name="txt_confirm_new_pass">Please confirm your new password</string>
    <string name="txt_edit_profesion">Edit Profession</string>
    <string name="txt_sm_about">Something about you</string>
    <string name="txt_say_sm_about">Say something about you</string>
    <string name="txt_confirm">Confirm</string>
    <string name="txt_gender_rather_not_say">Rather not say</string>
    <string name="txt_sign_out_msz">Are you sure you want to sign out?</string>
    <string name="app_name_seatunity">SeatUnity</string>
    <string name="txt_startscan_forboardingpass">Start scan for boarding pass</string>
    <string name="txt_select_country">Select country</string>
    <string name="txt_select_photo">Change profile image</string>
    <string name="txt_select_age">Select age</string>
    <string name="txt_gender">Gender</string>
    <string name="txt_gender_female">Female</string>
    <string name="txt_gender_male">Male</string>
    <string name="txt_gender_not_say">I prefer to not say</string>
    <string name="txt_cancel_cap" tools:ignore="ButtonCase">CANCEL</string>
    <string name="txt_apply_cap">APPLY</string>
    <string name="txt_status">Your status goes here</string>
    <string name="acc_live_in">Live in</string>
    <string name="acc_age">Age</string>
    <string name="acc_gender">Gender</string>
    <string name="acc_prof">Profession</string>
    <string name="acc_seatting_pref">Seating preferences</string>
    <string name="acc_som_about_you">Something about you</string>
    <string name="acc_change_pass">Change password</string>
    <string name="acc_sign_out">Sign out</string>
    <string name="txt_cdg">CDG</string>
    <string name="txt_jfk">JFK</string>
    <string name="txt_flight_no">Flight</string>
    <string name="txt_seat_nno">Seat</string>
    <string name="txt_class">Class</string>
    <string name="txt_seatmate">Seatmates</string>
    <string name="txt_boarding_pass">Boarding Pass</string>
    <string name="txt_user_name">User Name</string>
    <string name="txt_email_addess">email address</string>
    <string name="txt_myaccounts">My Account</string>
     <string name="txt_past_flight">Past Flights</string>
     <string name="txt_home">Home</string>
     <string name="txt_seating_profile">Seating Profile</string>
    <string name="txt_premium_account">Premium Account</string>
   <string name="txt_past_boarding_passes">Past Boarding Passes</string>
    <string name="txt_ok">OK</string>
    <string name="txt_add">Add</string>
    <string name="txt_shared_flight_title">Shared Flights</string>
    <string name="txt_cancel">Cancel</string>
    <string name="txt_scan_boardingpass">Scan your boarding pass code</string>
    <string name="txt_add_from_locall">Add locally stored</string>
    <string name="txt_email_senttomail">Email is successfully sent to your address. You will get a confirmation mail soon. Please confirm the account.</string>
    <string name="txt_confirmtaion">You will get a confirmation mail soon. Please confirm the account....</string>
    <string name="txt_wrong_email">Wrong email or password. Please try again</string>
    <string name="txt_no_pastbpass">No past boarding passes.</string>
    <string name="txt_email_sent">Email is sent to your email account. Please activate your account from there.</string>
    <string name="txt_signup_failed1">Sign up is failed. Please try again</string>
    <string name="txt_login_failed">Log-in failed. Please try again</string>
    <string name="txt_login_success">Log-in successful</string>
    <string name="txt_update_success">Successfully updated your profile</string>
    <string name="txt_update_failed" tools:ignore="TypographyEllipsis">Failed to update your profile. Please try again... </string>
    <string name="txt_logout_success">Successfully logged-out </string>
    <string name="txt_logout_failed">Failed to sign-out. Please try again </string>
    <string name="txt_select_city">Age</string>
    <string name="txt_add_boardingpass">Add your boarding pass and find out with who
                             you share your fight</string>
    <string name="txt_say_to_register">Register for free to use our social features and
                              to connect with your seat mates</string>
    <string name="txt_welcome">Welcome</string>
    <string name="txt_enter_password">Please enter password</string>
    <string name="txt_fillup_required_field">Please fill up required field</string>
    <string name="txt_check_internet">Please check your internet connection</string>
    <string name="txt_enter_valid_email">Please enter valid email</string>
    <string name="txt_password_mismatched">Password and confirm password are not matched</string>
    <string name="txt_please_wait">Please Wait</string>
    <string name="txt_email">Email</string>
    <string name="txt_confirm_password">Confirm Password</string>
    <string name="txt_signup_message">Personal Details are optional and can be added in My Account </string>
    <string name="txt_first_name">First Name</string>
    <string name="txt_last_name">Last Name</string>
    <string name="txt_livein">Live in</string>
    <string name="txt_age">Age</string>
    <string name="txt_profession">Profession</string>
    <string name="txt_seatting_pref_cap">Seating Preference</string>
    <string name="txt_seatting_pref">Seating preference</string>
    <string name="txt_register">Register</string>
    <string name="txt_register_msz">By registering, you acknowledge that you have read and agreed to the SeatUnity</string>
    <string name="txt_term_off_condition">Terms of Conditions</string>
    <string name="txt_term_and_condition">Terms and Conditions</string>
    <string name="txt_password">Password</string>
    <string name="txt_login">Login</string>
    <string name="txt_forgot_pass">Forgot Password?</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="app_picker_name">Applications</string>
    <string name="bookmark_picker_name">Bookmarks</string>
    <string name="button_add_calendar">Add to calendar</string>
    <string name="button_add_contact">Add contact</string>
    <string name="button_book_search">Book Search</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_custom_product_search">Custom search</string>
    <string name="button_dial">Dial number</string>
    <string name="button_email">Send email</string>
    <string name="button_get_directions">Get directions</string>
    <string name="button_mms">Send MMS</string>
    <string name="button_ok">OK</string>
    <string name="button_open_browser">Open browser</string>
    <string name="button_product_search">Product search</string>
    <string name="button_search_book_contents">Search contents</string>
    <string name="button_share_app">Application</string>
    <string name="button_share_bookmark">Bookmark</string>
    <string name="button_share_by_email">Share via email</string>
    <string name="button_share_by_sms">Share via SMS</string>
    <string name="button_share_clipboard">Clipboard</string>
    <string name="button_share_contact">Contact</string>
    <string name="button_show_map">Show map</string>
    <string name="button_sms">Send SMS</string>
    <string name="button_web_search">Web search</string>
    <string name="button_wifi">Connect to Network</string>
    <string name="contents_contact">Contact info</string>
    <string name="contents_email">Email address</string>
    <string name="contents_location">Geographic coordinates</string>
    <string name="contents_phone">Phone number</string>
    <string name="contents_sms">SMS address</string>
    <string name="contents_text">Plain text</string>
    <string name="history_clear_text">Clear history</string>
    <string name="history_clear_one_history_text">Clear</string>
    <string name="history_email_title">Barcode Scanner history</string>
    <string name="history_empty">Empty</string>
</resources>