<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff" >

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:src="@drawable/seatunity_logo" />

    <TextView
        android:id="@+id/tv_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/et_email"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:text="@string/txt_enter_email_address"
        android:textColor="#2D3E50"
        android:textSize="16dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/rounded_email_forgot_pass"
        android:ems="10"
        android:hint="@string/txt_email"
        android:paddingLeft="5dp"
        android:textColor="#ffffff"
        android:textSize="25dp" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/btn_send"
        android:onClick="ForgotPassBtnClicked"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_below="@+id/et_email"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textSize="24dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_seatmate_button"
        android:text="@string/txt_send"
        android:textColor="#ffffff" />

</RelativeLayout>